<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/ActivityTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_500"
            android:text="@string/activity_home" />

        <TextView
            style="@style/ActivityDescriptionStyle"
            android:layout_width="match_parent"
            android:textColor="@color/black_500"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_home_description" />
    </LinearLayout>

    <TextView
        android:id="@+id/search"
        style="@style/ActivityStyle"
        android:background="@color/activity_search"
        android:text="@string/activity_search" />

    <TextView
        android:id="@+id/now_playing"
        style="@style/ActivityStyle"
        android:background="@color/activity_now_playing"
        android:text="@string/activity_now_playing" />

    <TextView
        android:id="@+id/favorites"
        style="@style/ActivityStyle"
        android:background="@color/activity_favorites"
        android:text="@string/activity_favorites" />

    <TextView
        android:id="@+id/store"
        style="@style/ActivityStyle"
        android:background="@color/activity_store"
        android:text="@string/activity_store" />
</LinearLayout>