<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_search"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/ActivityTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_search" />

        <TextView
            style="@style/ActivityDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_search_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/home_24"
            android:paddingLeft="12dp" />

        <Button
            android:id="@+id/details_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_details" />

        <Button
            android:id="@+id/now_playing_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_now_playing" />
    </LinearLayout>
</RelativeLayout>